[package]
name = "zone_2_coaching"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.9", features = ["multipart", "ws"] }
tokio = { version = "1.42", features = ["full", "tracing"] }
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
